MPlayer (1.0)

  rc1:

    DOCS:
    * German documentation translation almost finished

    Drivers:
    * IVTV hardware MPEG audio/video decoder output

    Decoders:
    * liba52 updated to 0.7.4 (slightly faster)
    * SSE optimizations for mp3lib
    * removed support for obsolete and non-free divx4 libraries

    Demuxers:
    * audio stream switching in MPEG-TS/PS, Matroska and
      streams supported by libavformat
    * libavformat demuxer now honors -alang
    * chapter seeking in Matroska files

    Inputs:
    * split of stream layer from libmpdemux to new stream library
    * PVR input for IVTV based cards (Hauppauge WinTV PVR-150/250/350/500)
    * native RTSP input (handles MPEG-TS over RTP) for generic RTSP servers
    * support for chapters seeking in dvd:// and dvdnav:// streams
    * radio support (radio://)

    FFmpeg/libavcodec:
    * VC-1/WMV3/WMV9 video decoder
    * Vorbis decoding speedup, now default Vorbis decoder

    GUI:
    * Windows version added

    MEncoder:
    * support of x264 encoding over libavcodec
    * removed support for obsolete and non-free divx4 libraries

    Ports:
    * MacIntel support

    Others:
    * SSA/ASS subtitle renderer


  pre8: "NeuTeam strikes back" June 11, 2006

    Security:
    * support for compilation with non-executable stack
    * fix the major issues caught by Coverity's static analysis runs

    DOCS:
    * environment variables documentation started
    * interactive control fully documented
    * improved encoding guide
    * new technical encoding guide in DOCS/tech/encoding-guide.txt
      which is to be merged into the existing guide
    * encoding tips for x264 and XviD
    * how to set up MEncoder for x264 support
    * new advanced audio usage guide with surround sound instructions
    * Hungarian XML documentation translation finished
    * Czech documentation translation finished
    * French MPlayer documentation synced
    * German man page synced
    * Hungarian man page synced